--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image " style="background-image: url(/assets/Newfolder/download.png)">
+  <div id="hero" class="hero route bg-image " style="background-image: url(./assets/Newfolder/download.png)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -100,7 +100,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="/assets/Newfolder/IMG-20220809-WA0006.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="./assets/Newfolder/IMG-20220809-WA0006.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -336,9 +336,9 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="/assets/Newfolder/icon3@2x.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/Newfolder/icon3@2x.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="/assets/Newfolder/icon3@2x.png" alt="" class="img-fluid" style="height: 357px;">
+                  <img src="./assets/Newfolder/icon3@2x.png" alt="" class="img-fluid" style="height: 357px;">
                 </div>
               </a>
               <div class="work-content">
@@ -360,9 +360,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="/assets/Newfolder/kopiko.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/Newfolder/kopiko.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="/assets/Newfolder/kopiko.jpg" alt="" class="img-fluid" style="height: 357px;">
+                  <img src="./assets/Newfolder/kopiko.jpg" alt="" class="img-fluid" style="height: 357px;">
                 </div>
               </a>
               <div class="work-content">
@@ -384,9 +384,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="/assets/Newfolder/coca-cola.webp" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/Newfolder/coca-cola.webp" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="/assets/Newfolder/coca-cola.webp" alt="" class="img-fluid" style="height: 357px;">
+                  <img src="./assets/Newfolder/coca-cola.webp" alt="" class="img-fluid" style="height: 357px;">
                 </div>
               </a>
               <div class="work-content">
