--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://safwanmohammad.github.io/Coco-Cola-website/"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
