added main project

--- a/index.html
+++ b/index.html
@@ -363,22 +363,24 @@
         <div class="row">
           <div class="col-md-3">
             <div class="work-box">
-              <a href="assets/Newfolder/icon3@2x.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/Newfolder/commerce_1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/Newfolder/icon3@2x.png" alt="" class="img-fluid" style="width: 100%; height: 230px;">
+                  <a href="https://shopwalkfree.pythonanywhere.com/">
+                  <img src="assets/Newfolder/commerce_1.png" alt="" class="img-fluid" style="width: 100%; height: 230px;">
+                </a>
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Spotify</h2>
+                    <h2 class="w-title">e_commerce_1</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://safwanmohammad.github.io/spotify-Website/"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://shopwalkfree.pythonanywhere.com/"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div> 
                 </div>
@@ -387,22 +389,24 @@
           </div>
           <div class="col-md-3">
             <div class="work-box">
-              <a href="assets/Newfolder/kopiko.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/Newfolder/todo.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/Newfolder/kopiko.jpg" alt="" class="img-fluid" style="height: 230px; width: 100%;">
+                  <a href="https://walkfree.pythonanywhere.com/">
+                  <img src="assets/Newfolder/todo.png" alt="" class="img-fluid" style="height: 230px; width: 100%;">
+                </a>
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Kopiko</h2> 
+                    <h2 class="w-title">Todo</h2> 
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://safwanmohammad.github.io/KopikoWebSite/"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://walkfree.pythonanywhere.com/"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -411,22 +415,22 @@
           </div>
           <div class="col-md-3">
             <div class="work-box">
-              <a href="assets/Newfolder/coca-cola.webp" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/Newfolder/travel.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/Newfolder/coca-cola.webp" alt="" class="img-fluid" style="height: 230px; width: 100%;">
+                  <img src="assets/Newfolder/travel.png" alt="" class="img-fluid" style="height: 230px; width: 100%;">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">coco-cola</h2>
+                    <h2 class="w-title">Travel</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://safwanmohammad.github.io/Coco-Cola-website/"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://travelwalkfree.pythonanywhere.com/"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -436,22 +440,24 @@
 
           <div class="col-md-3">
             <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/Newfolder/movie.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-4.jpg" alt="" class="img-fluid" style="height: 230px; width: 100%;">
+                  <a href="https://moviewalkfree.pythonanywhere.com/">
+                  <img src="assets/Newfolder/movie.png" alt="" class="img-fluid" style="height: 230px; width: 100%;">
+                </a>
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Bindo Laro Cado</h2>
+                    <h2 class="w-title">Movie</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://moviewalkfree.pythonanywhere.com/"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -478,11 +484,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="work-box">
               <a href="assets/Newfolder/icon3@2x.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
+                  <a href="https://safwanmohammad.github.io/spotify-Website/">
                   <img src="assets/Newfolder/icon3@2x.png" alt="" class="img-fluid" style="width: 100%; height: 230px;">
+                </a>
                 </div>
               </a>
               <div class="work-content">
@@ -502,11 +510,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="work-box">
               <a href="assets/Newfolder/kopiko.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
+                  <a href="https://safwanmohammad.github.io/KopikoWebSite/">
                   <img src="assets/Newfolder/kopiko.jpg" alt="" class="img-fluid" style="height: 230px; width: 100%;">
+                </a>
                 </div>
               </a>
               <div class="work-content">
@@ -526,11 +536,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="work-box">
               <a href="assets/Newfolder/coca-cola.webp" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
+                  <a href="https://safwanmohammad.github.io/Coco-Cola-website/">
                   <img src="assets/Newfolder/coca-cola.webp" alt="" class="img-fluid" style="height: 230px; width: 100%;">
+                </a>
                 </div>
               </a>
               <div class="work-content">
