--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <!-- <h1 class="logo"><a href="index.html">safwan</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="https://lh3.googleusercontent.com/a-/AFdZucoh0lDUxjTxG05bEWicF5ZfNrikXenGqbBCw9RwxQ=s288-p-rw-no" alt="" class="img-fluid" style="width:100px ;height:100px ;"></a>
+
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -80,7 +80,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">I am safwan</h1>
+          <h1 class="hero-title mb-4">I am Safwan</h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="python_django_developer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
@@ -417,7 +417,9 @@
             <div class="work-box">
               <a href="assets/Newfolder/travel.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
+                  <a href="https://travelwalkfree.pythonanywhere.com/">
                   <img src="assets/Newfolder/travel.png" alt="" class="img-fluid" style="height: 230px; width: 100%;">
+                    </a>
                 </div>
               </a>
               <div class="work-content">
