--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             <div class="work-box">
               <a href="assets/Newfolder/commerce_1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <a href="https://shopwalkfree.pythonanywhere.com/">
+                  <a href="https://ecommmercewalkfree.pythonanywhere.com/">
                   <img src="assets/Newfolder/commerce_1.png" alt="" class="img-fluid" style="width: 100%; height: 230px;">
                 </a>
                 </div>
@@ -380,7 +380,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://shopwalkfree.pythonanywhere.com/"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://ecommmercewalkfree.pythonanywhere.com/"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div> 
                 </div>
