--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="https://formspree.io/f/xknendbl" method="post" role="form" class="php-email-form">
+                      <form action="mailto:babusafu004@gmail.com" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -627,7 +627,7 @@
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        please contact me for  more information  , if you need my help ,please send me a message
+                        please get in touch with me for  more information, if you need my help, please send me a message
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span>calicut road,
