--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="mailto:babusafu004@gmail.com" method="post" role="form" class="php-email-form">
+                      <form action="mailto:babusafwan004@gmail.com" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -609,7 +609,7 @@
                           </div>
                           <div class="col-md-12 text-center my-3">
                             <div class="loading">Loading</div>
-                            <div class="error-message"></div>
+                          
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
