--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="mailto:babusafwan004@gmail.com" method="post" role="form" class="php-email-form">
+                      <form action="mailto:babusafu004@gmail.com" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
