--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      I am a Python programmer, getting trained by Inmakes-learning-hub and Brototype.  I have a few years of work experience learning Python full stack at Inmakes learning hub. Also had technical skills in Mern stack except for React trained by Brototype. Now I'm focused on Python developer .
-                      I want to share this quote with all programmers.
+                     Skilled multitasker with a superior work ethic and good teamwork, problem-solving, and organizational skills. Willing to take on any task to help the team. Reliable and dedicated team player with a hardworking and resourceful approach.
                      
                     </p>
                     <p class="lead">
